--- a/NLP Introduction.ipynb
+++ b/NLP Introduction.ipynb
@@ -112,11 +112,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "There are few important types of texts, which helps in improving modeling of the words.\n",
+    "\n",
+    "**Lemma** : It is the base of the word. Eg: Eating is lemmatized to Eat.\n",
+    "**Stopword**: These are the words which occurs frequently in english language but contains very little information. \n",
+    "Eg: a, the, is, and, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Token\t\tLemma \t\tStopword\n",
+      "Winners\t\twinner\t\tFalse\n",
+      "do\t\tdo\t\tTrue\n",
+      "n't\t\tn't\t\tTrue\n",
+      "do\t\tdo\t\tTrue\n",
+      "different\t\tdifferent\t\tFalse\n",
+      "things\t\tthing\t\tFalse\n",
+      ",\t\t,\t\tFalse\n",
+      "they\t\tthey\t\tTrue\n",
+      "do\t\tdo\t\tTrue\n",
+      "the\t\tthe\t\tTrue\n",
+      "things\t\tthing\t\tFalse\n",
+      "differently\t\tdifferently\t\tFalse\n",
+      ".\t\t.\t\tFalse\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Token\\t\\tLemma \\t\\tStopword\".format('Token', 'Lemma', 'Stopword'))\n",
+    "\n",
+    "for token in doc:\n",
+    "    print(f\"{str(token)}\\t\\t{token.lemma_}\\t\\t{token.is_stop}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But on the other hand, lemmatizing and dropping the stopwards entirely might result in degrading model performance.\n",
+    "Rather it should be used for hyperparameter optimization."
+   ]
   },
   {
    "cell_type": "code",
