--- a/NLP Introduction.ipynb
+++ b/NLP Introduction.ipynb
@@ -164,6 +164,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pattern Matching"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is matching tokens or phrases within chunks of text or whole documents."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from spacy.matcher import PhraseMatcher\n",
+    "matcher = PhraseMatcher(nlp.vocab, attr='LOWER')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "terms = ['Galaxy Note', 'iPhone 11', 'iPhone XS', 'Google Pixel']\n",
+    "patterns = [nlp(text) for text in terms]\n",
+    "matcher.add(\"TerminologyList\", patterns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(3766102292120407359, 17, 19), (3766102292120407359, 22, 24), (3766102292120407359, 30, 32), (3766102292120407359, 33, 35)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "text_doc = nlp(\"Glowing review overall, and some really interesting side-by-side \"\n",
+    "               \"photography tests pitting the iPhone 11 Pro against the \"\n",
+    "               \"Galaxy Note 10 Plus and last year’s iPhone XS and Google Pixel 3.\") \n",
+    "matches = matcher(text_doc)\n",
+    "print(matches)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TerminologyList iPhone 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "match_id, start, end = matches[0]\n",
+    "print(nlp.vocab.strings[match_id], text_doc[start:end])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
